--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,10 +3,15 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
+.theme-dark .nav-decoration {
+  display: block;
+}
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background-img: url(../images/cover-image-dark.png);
+  --background-color: #000028;
+  --accent-color: #FF0070;
+  --title-color: #DB00FF;
+  --main-text-color: #F1B2CE;
+  --accent-text-color: #000028;
 }
