--- a/styles/light.css
+++ b/styles/light.css
@@ -3,10 +3,15 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
-:root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+.theme-light .nav-decoration {
+  display: none;
 }
+:root.theme-light {
+  --background-img: url(../images/cover-image-light.png);
+  --background-color: #FFEEF6;
+  --accent-color: #FF8DCB;
+  --main-text-color: #353430;
+  --accent-text-color: #353430;
+  --title-color: #FFC2E6;
+}
+
