--- a/styles/light.css
+++ b/styles/light.css
@@ -14,4 +14,14 @@
   --accent-text-color: #353430;
   --title-color: #FFC2E6;
 }
+.theme-light .header__theme-menu-button:hover { 
+  border: 1px solid rgba(50, 49, 45, 0.4);
+  padding: 0.5px 12px;
+  }
+.theme-light .header__theme-menu-button:focus-visible {
+    text-decoration: underline var(--accent-text-color, #353430);
+  }
+.theme-light .header__theme-menu-button_active {
+    border: 1px solid var(--accent-text-color, #353430);
+  }
 
