--- a/styles/light.css
+++ b/styles/light.css
@@ -19,9 +19,27 @@
   padding: 0.5px 12px;
   }
 .theme-light .header__theme-menu-button:focus-visible {
-    text-decoration: underline var(--accent-text-color, #353430);
-  }
+  text-decoration: underline var(--accent-text-color, #353430);
+}
 .theme-light .header__theme-menu-button_active {
-    border: 1px solid var(--accent-text-color, #353430);
+  border: 1px solid var(--accent-text-color, #353430);
+}
+@media ( min-width: 375px) {
+  .theme-light .header__theme-menu-list {
+    margin-top: 65px;
+    margin-bottom: 4px;
   }
+}
+@media ( min-width: 768px ) {
+  .theme-light .header__theme-menu-list {
+    margin-top: 182px;
+    margin-bottom: 4px;
+  }
+}
+@media ( min-width: 1024px) {
+  .theme-light .header__theme-menu-list {
+    margin-top: 10px;
+    margin-bottom: 0px;
+  }
+}
 
