--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,6 +2,7 @@
   --background-img: url(../images/cover-image-dark.png);
   --background-color: #000028;
   --accent-color: #FF0070;
+  --decoration-color: #FF0070; 
   --main-font: 'IBM Plex mono';
   --accent-font: 'IBMPlexMono-Bold';
   --title-color: #DB00FF;
@@ -9,11 +10,12 @@
   --accent-text-color: #000028;
 }
 
-.theme-light {
+:root.theme-light {
   --background-img: url(../images/cover-image-light.png);
   --background-color: #FFEEF6;
   --accent-color: #FF8DCB;
   --main-text-color: #353430;
   --accent-text-color: #353430;
   --title-color: #FFC2E6;
+  --decoration-color: #353430; 
 }
