--- a/styles/dark.css
+++ b/styles/dark.css
@@ -14,4 +14,17 @@
   --title-color: #DB00FF;
   --main-text-color: #F1B2CE;
   --accent-text-color: #000028;
+  --decoration-color: #FF0070;
+}
+
+@media (prefers-color-scheme: dark) {
+  .theme-auto {
+    --background-img: url(../images/cover-image-dark.png);
+    --background-color: #000028;
+    --accent-color: #FF0070;
+    --title-color: #DB00FF;
+    --main-text-color: #F1B2CE;
+    --accent-text-color: #000028;
+    --decoration-color: #FF0070;    
+  }
 }
