--- a/styles/style.css
+++ b/styles/style.css
@@ -2,19 +2,21 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-  background-color: #fff;
+  background-color: var(--background-color, #000028);
   background-image: var(--background-img, url(../images/cover-image-dark.png));
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: var(--main-font, sans-serif);
+  font-family: var(--main-font, monospace);
   color: var(--main-text-color, #F1B2CE);
   block-size: 100%;
   padding: 0px 2px;
+  margin-bottom: 0px
 }
 
 .header {
+  block-size: 100vh;
   display: grid;
   grid-template-rows: repeat(3, min-content);
 }
@@ -60,7 +62,7 @@
 }
 
 .header__theme-menu-button {
-  color: var(--accent-color, #FF0070);
+  color: var(--decoration-color, #FF0070);
   background-color: transparent;
   border: none;
   text-transform: lowercase;
@@ -77,10 +79,10 @@
 .header__theme-menu-button:focus-visible {
   outline: none;
   text-underline-offset: 5px;
-  text-decoration: underline var(--accent-color, #FF0070);
+  text-decoration: underline var(--decoration-color, #FF0070);
 }
 .header__theme-menu-button_active {
-  border: 1px solid var(--accent-color, #FF0070);
+  border: 1px solid var(--decoration-color, #FF0070);
   pointer-events: none;
 }
 
@@ -92,7 +94,7 @@
 }
 
 .content-section__title {
-  color: var(--accent-color, #F1B2CE);
+  color: var(--decoration-color, #FF0070);
   font-size: 18px;
   font-weight: bold;
   margin: 0px;
@@ -109,28 +111,24 @@
   margin: 0px;
 }
 
-.header__decorated-zone .footer__decorated-zone {
+.decorated-zone {
   position: relative;
 }
-.header__decorated-zone::before {
+.decorated-zone::before {
   content: "";
   position: absolute;
-  right: 10px;
-  top: 10px;
   width: 25px;
   height: 25px;
-  border-top: 1px solid var(--accent-color, #FF0070);
-  border-right: 1px solid var(--accent-color, #FF0070);
+  border-top: 1px solid var(--decoration-color, #FF0070);
+  border-right: 1px solid var(--decoration-color, #FF0070);
 }
-.header__decorated-zone::after {
+.decorated-zone::after {
   content: "";
   position: absolute;
-  top: 632px;
-  left: 10px;
   width: 25px;
   height: 25px;
-  border-bottom: 1px solid var(--accent-color, #FF0070);
-  border-left: 1px solid var(--accent-color, #FF0070);
+  border-bottom: 1px solid var(--decoration-color, #FF0070);
+  border-left: 1px solid var(--decoration-color, #FF0070);
 }
 .content-section {
   display: grid;
@@ -138,6 +136,11 @@
 
 .article-title {
   font-size: 18px;
+}
+
+.content-section__article {
+  display: grid;
+  gap: 10px;
 }
 
 .content-section__article-text {
@@ -153,7 +156,7 @@
   position: relative;
 }
 .accent-link:hover {
-  text-decoration: underline var(--main-text-color, #F1B2CE);
+  border-bottom: 1px solid var(--main-text-color, #F1B2CE);
 }
 .accent-link:hover::after {
   content: '';
@@ -179,6 +182,10 @@
   line-height: 23.4px;
 }
 
+.different-section__grid-container {
+  display: grid;
+}
+
 .content-section__gallery-img {
   display: block;
   inline-size: 100%;
@@ -187,30 +194,22 @@
   object-position: center;
 }
 
-.footer__decorated-zone {
-  position: relative;
-}
-.footer__decorated-zone::before {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--accent-color, #FF0070);
-  border-right: 1px solid var(--accent-color, #FF0070);
-}
-.footer__decorated-zone::after {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid var(--accent-color, #FF0070);
-  border-left: 1px solid var(--accent-color, #FF0070);
+.footer {
+  block-size: 100vh;
 }
 
 @media ( min-width: 375px) {
   .header {
     min-block-size: 668px;
     margin-bottom: 31px;
+  }
+  .header__decorated-zone::before {
+    top: 2px;
+    right: 0px;
+  }
+  .header__decorated-zone::after {
+    left: 0px;
+    bottom: 20px;
   }
   .header__theme-menu {
     justify-items: end;
@@ -244,9 +243,9 @@
   .content-section__title {
     margin-bottom: 19px;
   }
-  .article-title {
+  /* .article-title {
     margin-bottom: 10px;
-  }
+  } */
   .gallery-section .article-title {
     margin-bottom: 0px;
   }
@@ -278,7 +277,7 @@
     right: 1px;
   }
   .footer__decorated-zone::after {
-    top: 630px;
+    bottom: 10px;
     left: 1px;
   }
 }
@@ -288,7 +287,7 @@
     margin: 0;
   }
   .header {
-    min-height: 1024px;
+    min-block-size: 1024px;
     margin: 8px 8px 51.5px 0px;
     grid-template-columns: repeat(2, 1fr);
   }
@@ -316,11 +315,11 @@
     margin-right: 10px;
   }
   .header__decorated-zone::before {
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 10px;
   }
   .header__decorated-zone::after {
-    top: 978px;
+    bottom: 30px;
     left: 20px;
   }
   .main-section {
@@ -333,19 +332,23 @@
     margin-bottom: 80px;
   }
   .content-section__title {
-    grid-column: 1;
+    grid-column: 1/2;
     grid-row: 1/3;
     margin-bottom: 9px;
   }
   .content-section__article {
-    grid-column: 2;
+    grid-column: 2/3;
     margin-bottom: 10px;
   }
   .content-section__article-text {
     max-inline-size: 100%;
   }
-  .different-grid {
+  .different-section__grid-container {
     grid-column: 1/3;
+    row-gap: 10px;
+  }
+  .different-grid {
+    grid-column: 1/4;
   }
   .article-title__unusual {
     block-size: min-content;
@@ -382,14 +385,15 @@
   }
   .footer {
     min-block-size: 1024px;
+    margin: 0px 20px;
   }
   .footer__decorated-zone::before {
-    right: 18px;
     top: 20px;
+    right: 0px;
   }
   .footer__decorated-zone::after {
-    top: 978px;
-    left: 18px;
+    bottom: 20px;
+    left: 0px;
   }
 }
 
@@ -423,9 +427,6 @@
   .header-title {
     margin-bottom: 117px;
   }
-  .header__decorated-zone::after {
-    top: 720px
-  }
   .content-section {
     column-gap: 8px;
   }
@@ -435,27 +436,16 @@
  section:nth-child(3) .content-section__title {
     grid-row: 1/3;
   }
-  .content-section:nth-child(2) {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: min-content 1fr;
-  }
   .article-title__unusual {
     block-size: min-content;
   }
-  .different-section {
+  .different-section__grid-container {
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 20px;
+    row-gap: 20px;
   }
-  .different-grid:nth-of-type(1) {
-    grid-column: 1;
-    grid-row: 2/3;
-  }
-  .different-grid:nth-of-type(2) {
-    grid-column: 2;
-    grid-row: 2/3;
-  }
-  .different-grid:nth-of-type(3) {
-    grid-column: 3;
-    grid-row: 2/3;
+  .different-grid {
+    grid-column: auto;
   }
   .gallery-section {
     column-gap: 20px;
@@ -464,43 +454,12 @@
   .footer {
     min-block-size: 768px;
   }
+  .footer__decorated-zone::before {
+    top: 20px;
+  }
   .footer__decorated-zone::after {
-    top: 720px;
-    left: 18px;
+    bottom: 20px;
+    left: 0px;
   }
 }
 
-@media (prefers-color-scheme: light) {
-  .nav-decoration {
-    display: none;
-  }
-  .theme-auto {
-    --background-img: url(../images/cover-image-light.png);
-    --background-color: #FFEEF6;
-    --accent-color: #FF8DCB;
-    --main-text-color: #353430;
-    --accent-text-color: #353430;
-    --title-color: #FFC2E6;
-  }
-  .header__theme-menu-button:hover {
-  border: 1px solid rgba(50, 49, 45, 0.4);
-  padding: 0.5px 12px;
-  }
-  .header__theme-menu-button:focus-visible {
-    text-decoration: underline var(--accent-text-color, #353430);
-  }
-  .header__theme-menu-button_active {
-    border: 1px solid var(--accent-text-color, #353430);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .theme-auto {
-    --background-img: url(../images/cover-image-dark.png);
-    --background-color: #000028;
-    --accent-color: #FF0070;
-    --title-color: #DB00FF;
-    --main-text-color: #F1B2CE;
-    --accent-text-color: #000028;
-  }
-}
