--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@
   color: var(--main-text-color, #F1B2CE);
   block-size: 100%;
   padding: 0 10px;
+  position: relative;
 }
 
 .header {
@@ -27,22 +28,23 @@
   margin-block-end: 0;
 }
 
-.nav-decoration {
+.text-decoration {
+  position: absolute;
   display: flex;
   flex-direction: row;
   align-items: center;
   color: var(--accent-color, #FF0070);
   gap: 10px;
-  margin: 13px 28px 0px 0px;
+  top: 20px;
+  right: 30px;
   font-weight: normal;
   line-height: 25%;
   font-size: 18px;
-  position: relative;
   cursor: default;
 }
-.nav-decoration::after {
+.text-decoration::after {
   position: absolute;
-  right: -19px;
+  left: 43px;
   top: -3px;
   content: '';
   display: block;
@@ -53,6 +55,9 @@
   box-shadow: 0 0 4px 2px var(--accent-color, #FF0070);
   font-weight: normal;
 }
+/* .header__theme-menu-list {
+  padding-top: 18px;
+} */
 
 .header__theme-menu-item {
   list-style: none;
@@ -77,7 +82,6 @@
 }
 .header__theme-menu-button:focus-visible {
   outline: none;
-  /* text-underline-offset: 5px;  */
   border-bottom: 1px solid var(--decoration-color, #FF0070) ;
 }
 .header__theme-menu-button_active {
@@ -211,7 +215,7 @@
   }
   .header__theme-menu {
     justify-items: end;
-    margin-bottom: 64px;
+    margin: 64px 0px 69px;
   }
   .header__theme-menu-item:last-of-type {
     margin-bottom: 0px;
@@ -289,7 +293,7 @@
   }
   .header__theme-menu {
     grid-column: 2;
-    margin-bottom: 170px;
+    margin: 180px 0px 178px;
     text-align: left;
   }
   .header-title {
@@ -304,8 +308,9 @@
     grid-column: 2;
     max-inline-size: calc(100% - 15px);
   }
-  .nav-decoration {
-    margin: 23px 38px 0px 0px;
+  .text-decoration {
+    top: 30px;
+    right: 40px;
   }
   .header__theme-menu-list {
     margin-right: 10px;
@@ -393,6 +398,12 @@
   }
 }
 
+@media (height >= 668px) {
+  .header, .footer {
+    grid-template-rows: 1fr min-content 1fr; 
+  }
+}
+
 @media ( min-width: 1024px) {
   .page {
     margin: 0 auto;
@@ -404,11 +415,7 @@
     position: relative;
     grid-column: 1/3;
     justify-items: center;
-    margin-bottom: 263px;
-  }
-  .nav-decoration {
-    position: absolute;
-    right: 1px;
+    margin: 0px 0px 263px;
   }
   .header__theme-menu-list {
     display: flex;
@@ -424,7 +431,7 @@
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
   .header-title {
-    margin-bottom: 117px;
+    margin-bottom: 114px;
   }
   .content-section {
     column-gap: 8px;
@@ -432,7 +439,7 @@
   .content-section__title {
     grid-row: 1;
   }
- section:nth-child(3) .content-section__title {
+ .title-how {
     grid-row: 1/3;
   }
   .article-title__unusual {
