--- a/styles/light.css
+++ b/styles/light.css
@@ -33,7 +33,7 @@
   }
   :root {
     --background-img: url(../images/cover-image-light.png);
-    --background-color: #FFEEF6;
+    --background-color: #FFF1F7;
     --accent-color: #FF8DCB;
     --main-text-color: #353430;
     --accent-text-color: #353430;
@@ -48,7 +48,7 @@
     border-bottom: 1px solid var(--accent-text-color, #353430);
   }
   .header__theme-menu-button_active {
-    border: 1px solid var(--accent-text-color, #353430);
+    border: 1px solid var(--accent-text-color, #353430);     
   }
 }
 
